--- a/css/styles.css
+++ b/css/styles.css
@@ -15,4 +15,17 @@
     width: auto;
     margin-top: 20px;
 }
-
+.searchBar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.search button {
+    height: 30px;
+    width: 30px;
+}
+.search {
+    height: 20px;          
+    width: 20px;           
+    border-radius: 50%;      
+}
